fix(style): add left alignment of code

--- a/src/components/Code/TerminalCode/TerminalCode.css
+++ b/src/components/Code/TerminalCode/TerminalCode.css
@@ -7,4 +7,5 @@
     font-size: 1rem;
     overflow: auto;
     white-space: pre-wrap;
+    text-align: left;
 }
